--- a/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -8,54 +8,63 @@
 <c:url var="url_clean" value="${fn:replace(pageContext.request.requestURL, pageContext.request.requestURI, '')}/">
 </c:url>
 <div id="header">
-    <a class="home" href="${url_clean}index
-<c:if test='${not empty currentPage}'>?page=${currentPage}</c:if>
-">
-
-        <fmt:message key="header_jspf.anchor.home"/>
-    </a>
-
 
     <c:if test="${not empty user}">
-        <div id="leftHeader">
-            <a href="${url_clean}view-settings">
-                <fmt:message key="header_jspf.anchor.settings"/>
+        <div class="home_wrapper">
+            <a class="home" href="${url_clean}index
+<c:if test='${not empty currentPage}'>?page=${currentPage}</c:if>
+">
+                <fmt:message key="header_jspf.anchor.home"/>
             </a>
         </div>
-        <div class="rightHeader
+        <div class="leftRightWrapper">
+            <div id="leftHeader">
+                <div>
+                    <a href="${url_clean}settings">
+                        <fmt:message key="header_jspf.anchor.settings"/>
+                    </a>
+                </div>
+                <c:if test="${not empty error_not_valid_symbols_locale_format}">
+                    <div class="error_header">
+                        <fmt:message key="header_jsp.error.error_not_valid_symbols_locale"/>
+                    </div>
+                </c:if>
+            </div>
+
+            <div class="rightHeader
             <c:if test="${userRole.name eq 'admin'}">
                 admin_header
             </c:if>
             ">
-            <div class="locale">
-                <div class="dropdown show dropdown_custom">
-                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button"
-                       id="dropdownMenuLinkFilter"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <c:set var="ru" value="ru"/>
-                        <c:set var="en" value="en"/>
-                        <c:choose>
-                            <c:when test="${defaultLocale eq ru}">
-                                <option value="">
-                                    <fmt:message key="index_jsp.label.language.russian"/>
-                                </option>
-                            </c:when>
-                            <c:when test="${defaultLocale eq en}">
-                                <option value="">
-                                    <fmt:message key="index_jsp.label.language.english"/>
-                                </option>
-                            </c:when>
-                            <c:otherwise>
-                                <option value="">
-                                    <fmt:message key="index_jsp.label.choose"/>
-                                </option>
-                            </c:otherwise>
-                        </c:choose>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-custom" aria-labelledby="dropdownMenuLinkFilter">
-                        <c:url var="url" value="${url_command}">
-                            <c:forEach items="${param}" var="entry">
-                                <c:if test="${
+                <div class="locale">
+                    <div class="dropdown show dropdown_custom">
+                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button"
+                           id="dropdownMenuLinkFilter"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <c:set var="ru" value="ru"/>
+                            <c:set var="en" value="en"/>
+                            <c:choose>
+                                <c:when test="${defaultLocale eq ru}">
+                                    <option value="">
+                                        <fmt:message key="index_jsp.label.language.russian"/>
+                                    </option>
+                                </c:when>
+                                <c:when test="${defaultLocale eq en}">
+                                    <option value="">
+                                        <fmt:message key="index_jsp.label.language.english"/>
+                                    </option>
+                                </c:when>
+                                <c:otherwise>
+                                    <option value="">
+                                        <fmt:message key="index_jsp.label.choose"/>
+                                    </option>
+                                </c:otherwise>
+                            </c:choose>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-custom" aria-labelledby="dropdownMenuLinkFilter">
+                            <c:url var="url" value="${url_command}">
+                                <c:forEach items="${param}" var="entry">
+                                    <c:if test="${
                                          entry.key != 'magazineId' &&
                                          entry.key != 'reset_checked' &&
                                          entry.key != 'login' &&
@@ -73,25 +82,30 @@
                                           entry.key != 'change_block' &&
                                           entry.key != 'user_id' &&
 
+                                       entry.key != 'localeToSetUser' &&
+                                       entry.key != 'lastName' &&
+                                       entry.key != 'firstName' &&
+
                                        entry.key != 'magazine_name_add_value' &&
                                        entry.key != 'magazine_price_add_value' &&
                                        entry.key != 'magazine_image_add_value' &&
                                        entry.key != 'magazine_theme_id_add_value' &&
                                        entry.key != 'magazine_theme_id_change_value'
-                                         }">
-                                    <c:param name="${entry.key}" value="${entry.value}"/>
-                                </c:if>
-                            </c:forEach>
-                            <c:param name="localeToSet" value="ru"/>
-                        </c:url>
-                        <a class="dropdown-item"
-                           href="<c:out value='${url}'/>">
-                            <fmt:message key="index_jsp.label.language.russian"/>
-                        </a>
 
-                        <c:url var="url" value="${url_command}">
-                            <c:forEach items="${param}" var="entry">
-                                <c:if test="${
+                                         }">
+                                        <c:param name="${entry.key}" value="${entry.value}"/>
+                                    </c:if>
+                                </c:forEach>
+                                <c:param name="localeToSet" value="ru"/>
+                            </c:url>
+                            <a class="dropdown-item"
+                               href="<c:out value='${url}'/>">
+                                <fmt:message key="index_jsp.label.language.russian"/>
+                            </a>
+
+                            <c:url var="url" value="${url_command}">
+                                <c:forEach items="${param}" var="entry">
+                                    <c:if test="${
                                          entry.key != 'magazineId' &&
                                          entry.key != 'reset_checked' &&
                                          entry.key != 'login' &&
@@ -108,27 +122,31 @@
                                           entry.key != 'change_block' &&
                                           entry.key != 'user_id' &&
 
+                                       entry.key != 'localeToSetUser' &&
+                                       entry.key != 'lastName' &&
+                                       entry.key != 'firstName' &&
+
                                        entry.key != 'magazine_name_add_value' &&
                                        entry.key != 'magazine_price_add_value' &&
                                        entry.key != 'magazine_image_add_value' &&
                                        entry.key != 'magazine_theme_id_add_value' &&
                                        entry.key != 'magazine_theme_id_change_value'
                                          }">
-                                    <c:param name="${entry.key}" value="${entry.value}"/>
-                                </c:if>
-                            </c:forEach>
-                            <c:param name="localeToSet" value="en"/>
-                        </c:url>
-                        <a class="dropdown-item"
-                           href="<c:out value='${url}'/>">
-                            <fmt:message key="index_jsp.label.language.english"/>
-                        </a>
+                                        <c:param name="${entry.key}" value="${entry.value}"/>
+                                    </c:if>
+                                </c:forEach>
+                                <c:param name="localeToSet" value="en"/>
+                            </c:url>
+                            <a class="dropdown-item"
+                               href="<c:out value='${url}'/>">
+                                <fmt:message key="index_jsp.label.language.english"/>
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="cabinet">
-                <a href="<c:if test="${not empty userRole}">
+                <div class="cabinet">
+                    <a href="<c:if test="${not empty userRole}">
                         <c:if test="${userRole.name eq 'admin'}">
                             admin-cabinet
                         </c:if>
@@ -138,22 +156,36 @@
                     </c:if>
 
             ">
-                    <c:out value="${user.firstName} ${user.lastName}"/>
+                        <c:out value="${user.firstName} ${user.lastName}"/>
 
-                    <c:if test="${userRole.name eq 'admin'}">
-                        <c:out value="(${userRole.name})"/>
-                    </c:if>
-                </a>
-            </div>
-            <div class="logout">
-                <a href="${url_clean}logout">
-                    <fmt:message key="header_jspf.anchor.logout"/>
-                </a>
+                        <c:if test="${userRole.name eq 'admin'}">
+                            <c:out value="(${userRole.name})"/>
+                        </c:if>
+                    </a>
+                </div>
+                <div class="logout">
+                    <a href="${url_clean}logout">
+                        <fmt:message key="header_jspf.anchor.logout"/>
+                    </a>
+                </div>
             </div>
         </div>
     </c:if>
 
     <c:if test="${empty user}">
+        <div>
+            <a class="home" href="${url_clean}index
+<c:if test='${not empty currentPage}'>?page=${currentPage}</c:if>
+">
+
+                <fmt:message key="header_jspf.anchor.home"/>
+            </a>
+        </div>
+        <c:if test="${not empty error_not_valid_symbols_locale_format}">
+            <div class="error_header">
+                <fmt:message key="header_jsp.error.error_not_valid_symbols_locale"/>
+            </div>
+        </c:if>
         <div class="rightHeader">
             <div class="locale">
                 <div class="dropdown show dropdown_custom">
@@ -200,6 +232,10 @@
                                           entry.key != 'change_block' &&
                                           entry.key != 'user_id' &&
 
+                                       entry.key != 'localeToSetUser' &&
+                                       entry.key != 'lastName' &&
+                                       entry.key != 'firstName' &&
+
                                        entry.key != 'magazine_name_add_value' &&
                                        entry.key != 'magazine_price_add_value' &&
                                        entry.key != 'magazine_image_add_value' &&
@@ -234,6 +270,10 @@
                                       entry.key != 'delete_magazine' &&
                                           entry.key != 'change_block' &&
                                           entry.key != 'user_id' &&
+
+                                       entry.key != 'localeToSetUser' &&
+                                       entry.key != 'lastName' &&
+                                       entry.key != 'firstName' &&
 
                                        entry.key != 'magazine_name_add_value' &&
                                        entry.key != 'magazine_price_add_value' &&
